src/tests/testfiles/variable-declarations/10.txt
Error at 3:9: Variable initialization must have the same type (have char * and char[])
char* h = hello;
    ^
